--- a/src/main/frontend/app/globals.css
+++ b/src/main/frontend/app/globals.css
@@ -3,75 +3,113 @@
 @tailwind utilities;
 
 @layer base {
-    h1 {
-        @apply text-3xl lg:text-4xl font-bold;
-    }
+  h1 {
+    @apply text-3xl lg:text-4xl font-bold;
+  }
 
-    h2 {
-        @apply text-2xl lg:text-3xl font-bold;
-    }
+  h2 {
+    @apply text-2xl lg:text-3xl font-bold;
+  }
 
-    h3 {
-        @apply text-xl lg:text-2xl font-bold;
-    }
+  h3 {
+    @apply text-xl lg:text-2xl font-bold;
+  }
 }
 
 @layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
+  .text-balance {
+    text-wrap: balance;
+  }
 }
 
 @font-face {
-    font-family: 'Pretendard Variable';
-    font-weight: 45 920;
-    font-display: swap;
-    src: url('./public/static/fonts/PretendardVariable.woff2') format('woff2');
+  font-family: 'Pretendard Variable';
+  font-weight: 45 920;
+  font-display: swap;
+  src: url('./public/static/fonts/PretendardVariable.woff2') format('woff2');
 }
 
 :root {
-    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  --padding-container-base: 48px;
+  --navbar-height: 64px;
 }
 
 header {
-    @apply text-gray-500;
+  @apply text-gray-500 bg-white;
+  height: var(--navbar-height);
 }
 
-header > div > p {
-    @apply text-black;
-    height: 100%;
-    flex: 1;
-    align-content: center;
+.container {
+  @apply max-w-screen-2xl;
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
-header > div > nav {
-    height: 100%;
-    flex: 3;
-    align-content: center;
+.container_inner {
+  @apply max-sm:flex-col;
+  display: flex;
+  width: 92%;
+  height: 100%;
+  max-width: calc(100% - var(--padding-container-base));
+  margin: 0 auto;
 }
 
-.header-nav_menu {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+.container_inner > * {
+  @apply flex items-center;
 }
 
-.header-nav_item {
-    height: 100%;
-    padding: 0 8px;
+.header-logo {
+  @apply text-black text-2xl font-bold;
+  min-height: var(--navbar-height);
 }
 
-.header-nav_item > a {
-    padding: 12px 10px;
-    font-size: 18px;
+.mobile-nav-menu {
+  @apply sm:hidden max-sm:flex max-sm:absolute max-sm:right-4 max-sm:top-4;
 }
 
-.header-login_menu > button {
-    padding: 0 8px;
+.nav_content {
+  @apply flex max-h-full justify-between max-sm:flex-col;
+  @apply max-sm:hidden;
+  flex: 1;
 }
 
-.header-login_menu > span {
-    @apply text-gray-400;
+.nav_content.open {
+  @apply max-sm:flex;
+}
+
+.nav-menu {
+  @apply flex items-center;
+  @apply m-0 p-0;
+  @apply max-sm:flex-col max-sm:w-full max-sm:bg-white max-sm:z-[1000] max-sm:w-[calc(100%+var(--padding-container-base))] max-sm:border-b max-sm:border-gray-200;
+}
+
+.nav-item {
+  @apply flex h-full items-center;
+  @apply max-sm:w-full;
+  padding: 0 8px;
+}
+
+.nav-item > a {
+  @apply max-sm:w-full max-sm:pt-[18px] max-sm:pb-[18px] max-sm:pl-[20px] max-sm:pr-[20px];
+  @apply hover:bg-gray-400 hover:bg-opacity-5 hover:text-black;
+}
+
+.login-container {
+  @apply flex items-center;
+  @apply max-sm:w-full;
+}
+
+.login-container > div.search-icon {
+  @apply max-sm:hidden;
+}
+
+.login-container > button {
+  @apply ml-5;
+  @apply max-sm:ml-0 max-sm:w-1/2 max-sm:pt-[18px] max-sm:pb-[18px] max-sm:pl-[20px] max-sm:pr-[20px];
+}
+
+.login-container > button:first-child {
+  @apply max-sm:mr-5;
 }
